--- a/ihs_analysis.Rmd
+++ b/ihs_analysis.Rmd
@@ -89,15 +89,27 @@ annotate=function(ihs){
   ann1$rank = as.numeric(rownames(ann1))
   
   genes=c("ABCG2", "SLC2A9", "PPARGC1A","PDZK1","GCKR","RREB1","SLC17A3","SLC16A9", "SLC22A11","SLC22A12", "INHBE")
-  plot(ann1 %>% filter(gene %in% genes) %>% group_by(gene) %>% ggplot(. , aes(x=gene, y=rank), ylim=c(0,6e6)) + 
-         geom_boxplot() + facet_wrap(~gene, scales = "free_x")+theme_bw() + ggtitle("Old Kottgen Genes") )
+  plot(ann1 %>% filter(gene %in% genes) %>% group_by(gene) %>% 
+         ggplot(. , aes(x=gene, y=rank), ylim=c(0,6e6)) + 
+         geom_boxplot() + 
+         facet_wrap(~gene, scales = "free_x")+
+         theme_bw() + 
+         ggtitle("Old Kottgen Genes") +
+         theme(axis.text.x=element_blank(),axis.ticks=element_blank())
+       )
   
   genes_new=c("TRIM46", "INHBB", "ORC4L", "SFMBT1","TMEM171", 
               "VEGFA","MLXIPL","PRKAG2","STC1","HNF4G","ASAH2", 
               "LTBP3", "PTPN11", "NRG4", "IGF1R", "NFAT5", "MAF",
               "HLF", "BCAS3", "QRICH2")
-  plot(ann1 %>% filter(gene %in% genes_new) %>% group_by(gene) %>% ggplot(. , aes(x=gene, y=rank), ylim=c(0,6e6)) + 
-         geom_boxplot() + facet_wrap(~gene, scales = "free_x")+theme_bw() +ggtitle("New Kottgen Genes") )
+  plot(ann1 %>% filter(gene %in% genes_new) %>% group_by(gene) %>% 
+         ggplot(. , aes(x=gene, y=rank), ylim=c(0,6e6)) + 
+         geom_boxplot() + 
+         facet_wrap(~gene, scales = "free_x")+
+         theme_bw() +
+         ggtitle("New Kottgen Genes") +
+         theme(axis.text.x=element_blank(),axis.ticks=element_blank())
+       )
   print("rank statistics by gene")
   print(as.data.frame(
     ann1 %>% 
